@@ -2,7 +2,7 @@
 #include "array.h"
 
 typedef struct iob_entry {
-  enum { FROMBUF, FROMBUF_FREE, FROMFILE, FROMFILE_CLOSE } type;
+  enum { FROMBUF, FROMBUF_FREE, FROMBUF_MUNMAP, FROMFILE, FROMFILE_CLOSE } type;
   int64 fd;
   const char* buf;
   uint64 offset,n;
