@@ -1,5 +1,6 @@
 0.27:
   add fmt_strm
+  add iob_addbuf_munmap
 
 0.26:
   fix really pathological case where io_timeouted would never
